--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,6 +129,12 @@ steps:
   displayName: 'Run WhiteSource Bolt'
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
-
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'FilePath'
+    TargetPath: '\\kbaddevpro58.appdev.kiwibank.internal\Publish\(Build.DefinitionName)\\(Build.BuildNumber)'
+    Parallel: true
   condition: succeeded()
 
